--- a/css/style.css
+++ b/css/style.css
@@ -38,8 +38,9 @@ body{
     font-size: 1.5em;
     text-decoration: none;
     text-transform: uppercase;
-    font-family: "Noto Sans CJK SC Light";
+    font-family: 'Roboto Light', sans-serif;
     letter-spacing: 3px;
+    font-weight: 100;
 }
 /*-- //header-left --*/
 /*-- top-nav --*/
@@ -229,7 +230,7 @@ ul.dropdown-menu li{
 	text-align: center;
     font-size: 3em;
     margin: 0;
-    font-family: "Noto Sans CJK SC Light";
+    font-family: 'Roboto', sans-serif;
 }
 .welcome-agileitsrow,.w3ls_team_grids{
 	margin:4em 0 0 0;
@@ -680,7 +681,7 @@ i.fa.fa-quote-right {
     color: #FFFFFF;
     font-size: 3em;
     text-decoration: none;
-    font-family: "Noto Sans CJK SC Light";
+    font-family: 'Roboto', sans-serif;
     letter-spacing: 3px;
 }
 .agile-footer-grid ul {
@@ -859,7 +860,7 @@ i.fa.fa-quote-right {
     font-size: 2em;
     color: #212121;
     margin: 0;
-    font-family: "Noto Sans CJK SC Light";
+    font-family: 'Roboto', sans-serif;
 }
 .w3layouts_breadcrumbs_left ul li a:hover{
     color: #a0d034;
@@ -1161,7 +1162,7 @@ a.w3_agile_dribble:hover{
     font-size: 2em;
     width: 90%;
     margin: 0 auto;
-    font-family: "Noto Sans CJK SC Light";
+    font-family: 'Roboto', sans-serif;
     letter-spacing: 3px;
 }
 .item-type-double .item-info .line {
